# SHADOWREALM-

./: .build-trigger  .gitignore  AI.jsx  CMakeLists.txt  Dockerfile  LICENSE  README.md  admin_console.cpp  build_android.sh  dependency  game  git clone  index.html  keygen.cpp  main_android.cpp  main_android_vulkan.cpp  main_desktop.cpp  package-lock.json  package.json  setup.sh  shadowrealm-ai.jsx  shadowrealm_gm.hpp  vite.config.ts
.github/: CODEOWNERS  build.yml
.github/workflows/: build.yml  yml  yml.
app/: build.gradle
app/src/: main.cpp
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
src/: Causality.h  game.ts  glad.c  main.ts  shadowrealm.cpp
src/scenes/: GameScene.ts  MenuScene.ts  UIScene.ts
src/src/: shadowrealm.cpp
src/systems/: CombatSystem.ts  NetworkManager.ts  PlayerController.ts  WorldGenerator.ts
src/types/: index.ts
